# WFSuite

./: .gitignore  LICENSE  License.doc  MANIFEST.in  README.md  pyproject.toml  setup.py
Data/absolute_phase/: Au_delta.npy
Data/absolute_phase/mask/: RanMask10umB0.npy  RanMask15umB0.npy  RanMask1um1mmB0p2.npy  RanMask20umB0.npy  RanMask2umB0p2.npy  RanMask2umB0p2_pad.npy  RanMask2umB0p2_rot90.npy  RanMask5umB0.npy  RanMask5umB0_rot90.npy  RanMask_15um_7mm.npy  RanMask_2um_4mm.npy  RanMask_3p5um_5mm.npy  RanMask_7um_7mm.npy
TEST_DIR/mask/: RanMask5umB0_rot90.npy
aps/: __init__.py
aps/wavefront_analysis/: __init__.py  __main__.py
aps/wavefront_analysis/__test/: test.py  test_2.py
aps/wavefront_analysis/absolute_phase/: absolute_phase_analyzer.py  facade.py  factory.py  wavefront_analyzer.py
aps/wavefront_analysis/absolute_phase/gui/: absolute_phase_manager.py  absolute_phase_manager_initialization.py  absolute_phase_widget.py  main_absolute_phase.py  read_image_file_widget.py  wf_gui.py
aps/wavefront_analysis/absolute_phase/legacy/: WXST_simplified.py  back_propagation_executor.py  diffraction_process.py  executor.py  process_images_executor.py
aps/wavefront_analysis/common/gui/: __test.py  util.py
aps/wavefront_analysis/common/legacy/: func.py
aps/wavefront_analysis/driver/: factory.py  mask_flipper.py  wavefront_sensor.py
aps/wavefront_analysis/driver/beamline/: factory.py  wavefront_sensor.py
aps/wavefront_analysis/driver/gui/: main_wavefront_sensor.py  wavefront_sensor_manager.py  wavefront_sensor_manager_initialization.py  wavefront_sensor_widget.py
aps/wavefront_analysis/launcher/: launcher_manager.py  launcher_manager_initialization.py  launcher_widget.py  main_launcher.py
aps/wavefront_analysis/relative_metrology/: factory.py  relative_metrology_analyzer.py
aps/wavefront_analysis/relative_metrology/gui/: main_relative_metrology.py  relative_metrology_manager.py  relative_metrology_manager_initialization.py  relative_metrology_widget.py
aps/wavefront_analysis/relative_metrology/legacy/: WSVT.py  WSVT_executor.py  WXST.py  WXST_executor.py  func.py
aps/wavefront_analysis/spinnet/legacy/: DS_network.py  SPINNet_estimate.py  module.py
aps/wavefront_analysis/spinnet/speckle_displacement/: DS_network.py  SPINNet_estimate.py
aps/wavefront_analysis/wavelet/legacy/: HDF5_results_cleaning.py  WSVT.py  WXST.py  func.py
aps/wavefront_analysis/wavelets/: facade.py  factory.py  wavelets_analyzer.py
aps/wavefront_analysis/wavelets/gui/: main_wavelets.py  wavelets_manager.py  wavelets_manager_initialization.py  wavelets_widget.py
aps/wavefront_analysis/wavelets/legacy/: HDF5_results_cleaning.py  WSVT.py  WSVT_executor.py  WXST.py  WXST_executor.py  func.py
aps/wavefront_analysis/wxst/legacy/: WXST.py
aps/wf_suite/: __init__.py  __main__.py
aps/wf_suite/absolute_phase/: __init__.py  absolute_phase_analyzer.py  factory.py
aps/wf_suite/absolute_phase/gui/: absolute_phase_manager.py  absolute_phase_manager_initialization.py  absolute_phase_widget.py  main_absolute_phase.py
aps/wf_suite/absolute_phase/legacy/: WXST_simplified.py  back_propagation_executor.py  process_images_executor.py
aps/wf_suite/common/: arguments.py
aps/wf_suite/common/gui/: read_image_file_widget.py  util.py
aps/wf_suite/common/legacy/: euclidean_dist.py  func.py  gui_func.py  integration.py
aps/wf_suite/driver/: factory.py  mask_flipper.py  wavefront_sensor.py
aps/wf_suite/driver/gui/: main_wavefront_sensor.py  wavefront_sensor_manager.py  wavefront_sensor_manager_initialization.py  wavefront_sensor_widget.py
aps/wf_suite/launcher/: launcher_manager.py  launcher_widget.py  main_launcher.py
aps/wf_suite/relative_metrology/: facade.py  factory.py  relative_metrology_analyzer.py
aps/wf_suite/relative_metrology/gui/: main_relative_metrology.py  relative_metrology_manager.py  relative_metrology_manager_initialization.py  relative_metrology_widget.py
aps/wf_suite/relative_metrology/legacy/: WSVT.py  WSVT_executor.py  WXST.py  WXST_executor.py
aps/wf_suite/spinnet/legacy/: DS_network.py  SPINNet_estimate.py  module.py
(+40 files in other folders)
